--- a/style.css
+++ b/style.css
@@ -348,3 +348,7 @@ nav .link-4 .box-4 .box-4-left {
     color: black;
     text-transform: uppercase;
 }
+
+/* header section end........... */
+
+/* main section start.............................. */
