--- a/style.css
+++ b/style.css
@@ -352,3 +352,9 @@ nav .link-4 .box-4 .box-4-left {
 /* header section end........... */
 
 /* main section start.............................. */
+
+
+
+
+
+/* main section end.............................. */
