--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ header {
     justify-content: space-between;
     background-color: #011c42;
     height: 12vh;
+    padding-left: 7vw;
     align-items: center;
-    padding-left: 6vw;
     font-family: "windsurf secondary";
+    /* border: 2px solid red; */
     /* font-size: 16px; */
 }
 
@@ -303,6 +304,22 @@ nav .link-4 .box-4 .box-4-left {
     font-size: 14px;
 }
 
+
+@media (width <=1200px) {
+    nav {
+        display: none;
+    }
+
+}
+
+/* nav .link-4 .box-4:hover {
+    display: block;
+    background-color: #ffffff33;
+
+
+    i am getting problem for hover on items of block which already appear when i hover on nav item....
+} */
+
 /* link-4 end */
 
 /* -------------------------------------------------------------------- */
@@ -352,9 +369,109 @@ nav .link-4 .box-4 .box-4-left {
 /* header section end........... */
 
 /* main section start.............................. */
+main {
+    background-color: #011c42;
+    width: 100vw;
+    height: 88vh;
+    padding: 0 7vw;
 
+    /* border: 2px solid red; */
+}
 
+.hero-section {
+    width: 100%;
+    height: 100%;
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 64px 0 128px 0;
 
+}
+
+.hero-content {
+    padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 64px;
+    /* border: 2px solid red; */
+}
+
+.hero-content>h1 {
+    color: #ffffff;
+    font-size: 72px;
+    line-height: 100%;
+    font-weight: 300;
+    font-family: "windsurf primary";
+
+}
+
+.hero-buttons {
+    display: flex;
+    gap: 16px;
+}
+
+.hero-buttons button {
+    font-size: 18px;
+    font-family: "windsurf secondary";
+    border: none;
+    font-weight: 500;
+}
+
+.hero-buttons .btn-1 {
+    padding: 16px 20px 16px 24px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    background-color: #34e8bb;
+    color: #0b100f;
+    width: 274px;
+    transition: border 1s ease-in-out;
+
+}
+
+.hero-buttons .btn-2 {
+    width: 240px;
+    padding: 16px 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff1a;
+    color: #ffffff;
+    border: 1px solid transparent;
+    transition: border 1s ease-in-out;
+
+}
+
+.hero-buttons .btn-1:hover {
+    background-color: #00ffbf;
+}
+
+.hero-buttons .btn-2:hover {
+    background-color: #ffffff26;
+}
+
+.hero-section .hero-para {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.hero-section .hero-para .para-point {
+    width: 6px;
+    height: 6px;
+    background-color: #34e8bb;
+}
+
+.hero-section .hero-para {
+    font-size: 20px;
+    color: #ffffff;
+    font-family: "windsurf secondary";
+}
 
 
 /* main section end.............................. */
